CREATE TABLE "enable_banking_session"
(
    "id"                bigint PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    "session_id"        TEXT        NOT NULL,
    "valid_until"       TIMESTAMPTZ NOT NULL,
    "bank_name"         TEXT        NOT NULL,
    "bank_account_iban" TEXT,
    "bank_account_uid"  TEXT,
    "account_id"        BIGINT
);
COMMENT ON COLUMN "enable_banking_session"."account_id" IS 'internal active account, to which the transactions from the bank are synced into';
ALTER TABLE "enable_banking_session"
    ADD FOREIGN KEY ("account_id") REFERENCES "account" ("id");

CREATE TABLE "enable_banking_session_account"
(
    "id"           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "session_id"   bigint,
    "account_iban" TEXT NOT NULL,
    "account_uid"  TEXT NOT NULL
);