// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
Enum log_operations {
  create
  update
  delete
}

Table log {
  id bigint [pk]
  created_at timestamptz [not null]
  operation log_operations [not null]
  modified_table_name text [not null]
  modified_by text [not null, note: 'username parsed from jwt token']
  subject_before jsonb
  subject_after jsonb
}

Table product {
  id bigint [pk]
  name TEXT [not null]
  price integer [not null, note: 'in cent']
  print boolean [default: true]
}

Table person {
  id bigint [pk]
  name TEXT [not null]
  room TEXT [not null]
  pays_floor_fees bool [not null]
  account_id bigint [ref: > account.id]
  print_on_product_tally_list boolean [default: true]
}

Table account {
  id bigint [pk]
  name TEXT [not null]
  is_active bool [not null]
}

Table transaction {
  id bigint [pk]
  source_account_id bigint [ref: > account.id, not null]
  target_account_id bigint [ref: > account.id, not null]
  amount integer [not null, note: 'in cent']
  created_at timestamptz [not null]
  value_date timestamptz [not null]
  description text [not null, default: '']
  receipt_mime_type TEXT
  receipt blob
}

Enum received_from {
  cash
  bank_account
  paypal
}

Table physical_transaction {
  id bigint [pk]
  transaction_id bigint [not null, ref: > transaction.id]
  source received_from [not null, default: '']
  created_at timestamp [not null]
  transaction_description text [not null, default: '']
}

Table settings {
  setting_key text [pk, unique, not null]
  value_int bigint
  value_string TEXT
}

Table recurring_transaction {
  id bigint [pk]
  amount int [not null, note: 'in cent']
  source_account_id bigint [ref: > account.id, not null]
  target_account_id bigint [ref: > account.id, not null]
  value_day_of_month int [not null]
  transaction_description text [not null, default: '']
  name text [not null, default: '']
}

Table flurbeitrag_scheduler_log {
  id bigint [pk]
  created_at DATE [not null]
}

Table recurring_transaction_scheduler_log {
  id bigint [pk]
  created_at DATE [not null]
  recurring_transaction_id BIGINT [not null, note: 'no reference to recurring transaction table, because it might get deleted']
  recurring_transaction_name TEXT [not null]
}

Table enable_banking_session {
  id bigint [pk]
  session_id TEXT [not null]
  valid_until TIMESTAMPTZ [not null]
  bank_name TEXT [not null]
  bank_account_iban TEXT
  bank_account_uid TEXT
  account_id BIGINT [ref: > account.id, note:'internal active account, to which the transactions from the bank are synced into']
}

Table enable_banking_session_account {
  id bigint [pk, increment]
  session_id bigint [ref: > enable_banking_session.id]
  account_iban TEXT [not null]
  account_uid TEXT [not null]
}